[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.22", features = [ "derive"] }
dotenv = "0.15.0"
miette = "4.2.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["default", "env-filter"] } 
